--- a/x86_64.config
+++ b/x86_64.config
@@ -76,3 +76,4 @@ CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 # CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-openclash=y
